istio/test-example-gtway-vrtsvc-httpbin/oci-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: oci-dev-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oci-dev-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - oci-dev-gateway
  http:
  - match:
    - uri:
        prefix: /ocidev/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: order-cart-integration

#use this endpoint to test it /ocidev/management/env
